--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "timeago.js": "^4.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
